--- a/raffler/app/assets/javascripts/templates/application.handlebars
+++ b/raffler/app/assets/javascripts/templates/application.handlebars
@@ -4,4 +4,9 @@
 	<!-- {{view Ember.TextField valueBinding="newEntryName"}} -->
 	{{input valueBinding="newEntryName" action="addEntry"}}
 	{{newEntryName}}
+	<ul>
+		{{#each entries as |entry|}}
+		<li>{{entry.name}}</li>
+		{{/each}}
+	</ul>
 </div>
