created entries contoller and moved code. moved entries set array from controller to router

--- a/raffler/app/assets/javascripts/templates/application.handlebars
+++ b/raffler/app/assets/javascripts/templates/application.handlebars
@@ -2,11 +2,6 @@
 	<h1>Raffler Baffler</h1>
 	<!-- depricated method -->
 	<!-- {{view Ember.TextField valueBinding="newEntryName"}} -->
-	{{input valueBinding="newEntryName" action="addEntry"}}
-	{{newEntryName}}
-	<ul>
-		{{#each entries as |entry|}}
-		<li>{{entry.name}}</li>
-		{{/each}}
-	</ul>
+	{{outlet}}
+	{{!-- works like yield in rails. renders out template and controller based on route --}}
 </div>
