added winner logic to controller....needed to change this.rejectBy to this.entries.rejectBy to work

--- a/raffler/app/assets/javascripts/templates/entries.handlebars
+++ b/raffler/app/assets/javascripts/templates/entries.handlebars
@@ -4,7 +4,7 @@
 	{{#each entries as |entry|}}
 	<li>
 	{{entry.name}}
-	{{#if winner}}
+	{{#if entry.winner}}
 		<span class="winner">Winner</span>
 	{{/if}}
 	</li>
